[package]
name = "brevduva"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
esp-idf-svc = { version = "0.49", default-features = false, optional = true }
embedded-svc = "0.28"
log = "0.4"
serde_json = "1"
serde = "1"
edge-mqtt = { git = "https://github.com/ivmarkov/edge-net.git", package = "edge-mqtt", features = [
    "embedded-svc",
], optional = true }
thiserror = "1"

[features]
default = []
embedded = ["esp-idf-svc", "esp-idf-svc/native", "std", "embuild"]
pc = ["edge-mqtt"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[build-dependencies]
embuild = { version = "0.32", optional = true }
