[package]
name = "brevduva"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", default-features = false, optional = true }
embedded-svc = { version = "0.28", default-features = false }
log = "0.4"
serde_json = "1"
serde = { version = "1", default-features = false }
edge-mqtt = { git = "https://github.com/ivmarkov/edge-net.git", package = "edge-mqtt", features = [
    "embedded-svc",
], optional = true }
thiserror = "2"
async-trait = "0.1"

[features]
default = []
embedded = ["esp-idf-svc", "esp-idf-svc/native", "std", "embuild"]
pc = ["edge-mqtt"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]

[build-dependencies]
embuild = { version = "0.32", optional = true }
